engine-net-2/examples/Errors/RuleParametersInTypeMismatch.grs
new graph "Rules.grg"

exec (m:M)=init ;> (n:N)=r(m)

quit
